--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile "org.jetbrains.kotlin:kotlin-reflect"
     compile "io.vertx:vertx-lang-kotlin-coroutines:$vertx_version"
+    compile "com.esotericsoftware:kryo:5.0.0-RC1"
 
     testCompile "io.vertx:vertx-unit:$vertx_version"
     testCompile "junit:junit:4.12"
