--- a/build.gradle
+++ b/build.gradle
@@ -57,46 +57,16 @@ task kotlinDocJar(type: Jar, dependsOn: dokka) {
     from dokka.outputDirectory
 }
 
-def pomConfig = {
-    licenses {
-        license {
-            name "WTFPL"
-            url "http://www.wtfpl.net/about"
-            distribution "https://github.com/windoze/vertx-kotlin-rpc"
-        }
-    }
-    developers {
-        developer {
-            id "windoze"
-            name "Chen Xu"
-            email "windoze@0d0a.com"
-        }
-    }
-}
-
 publishing {
     publications {
         mavenKotlin(MavenPublication) {
             from components.java
             artifact kotlinDocJar
-
             artifact sourceJar
 
-            pom.withXml {
-                def root = asNode()
-                root.appendNode('description', "A minimalist RPC framework for Vertx/Kotlin.")
-                root.children().last() + pomConfig
-
-                def dependenciesNode = root.appendNode('dependencies')
-                configurations.compile.allDependencies.each {
-                    if (it.group && it.name && it.version) {
-                        def dependencyNode = dependenciesNode.appendNode('dependency')
-                        dependencyNode.appendNode('groupId', it.group)
-                        dependencyNode.appendNode('artifactId', it.name)
-                        dependencyNode.appendNode('version', it.version)
-                    }
-                }
-            }
+            groupId 'codes.unwritten'
+            artifactId 'vertx-kotlin-rpc'
+            version '0.4'
         }
     }
 }
